--- a/styles.css
+++ b/styles.css
@@ -143,16 +143,15 @@ tr:last-child td {
   }
 }
 .caja{
-  background-color: #3453;
+  background-color: #1895;
   display: flex;
   flex-direction: column;
   padding: 5px;
-  height: 200px;
   justify-content: space-around
 }
 .c1{
   margin: 10px;
-  border: 1px solid #34495e;
+  border: 1px solid #189;
   border-radius: 10px;
 }
 .c2{
@@ -160,17 +159,23 @@ tr:last-child td {
   font-size: 12px
 }
 .btn{
-  background-color: #34495e;
+  background-color: #189;
   color: #fff;
   border: .6px solid transparent;
   border-radius: 5px;
   padding: 2px 0;
-  letter-spacing: 10px
+  letter-spacing: 10px;
+  font-family: popins;
+  margin: 10px 0;
 }
 .a{
   text-align: center;
   color: #189;
 }
 .b{
-  margin: 10px;
+  margin: 5px;
+}
+.splash{
+  width: 100%;
+  height: 100vh;
 }
